--- a/Blomsterhaven/style.css
+++ b/Blomsterhaven/style.css
@@ -82,7 +82,12 @@ body {
 .flower.small-daisy { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 80"><path d="M20 80 V 30" stroke="%23228B22" stroke-width="3"/><circle cx="20" cy="20" r="15" fill="white"/><circle cx="20" cy="20" r="5" fill="yellow"/></svg>'); height: 80px; }
 .flower.full-daisy { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 120"><path d="M30 120 V 40" stroke="%23228B22" stroke-width="4"/><circle cx="30" cy="30" r="25" fill="white"/><circle cx="30" cy="30" r="10" fill="yellow"/></svg>'); height: 120px; }
 .flower.small-tulip { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 80"><path d="M20 80 V 30" stroke="%23228B22" stroke-width="3"/><path d="M10 30 C 10 10, 30 10, 30 30 Z" fill="%23FF69B4"/></svg>'); height: 80px; }
-.flower.full-tulip { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 120"><path d="M30 120 V 40" stroke="%23228B22" stroke-width="4"/><path d="M10 40 C 10 10, 50 10, 50 40 Z" fill="%23FF1493"/></svg>'); height: 120px; }
+.flower.full-tulip {
+    background-image: url('images/tulipan.png');
+    height: 180px; /* 1.5x scaling */
+    width: 120px; /* 1.5x scaling */
+    image-rendering: pixelated; /* Prevents blurring for pixel art */
+}
 
 
 #ui-panel {
